--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BitWatchTV — Official Website</title>
+    <title>BitWatchTV — Watch • Earn • Enjoy</title>
 
     <style>
         body {
@@ -16,17 +16,19 @@
         }
         header {
             background: #111;
-            padding: 20px;
-            font-size: 24px;
+            padding: 25px;
+            font-size: 26px;
             font-weight: bold;
             color: #00ccff;
         }
-
-        .section {
+        section {
             padding: 25px;
+            max-width: 900px;
+            margin: auto;
+            line-height: 1.7;
         }
-
         .button {
+            display: inline-block;
             background: #00ccff;
             padding: 14px 24px;
             border-radius: 10px;
@@ -34,25 +36,112 @@
             font-size: 18px;
             font-weight: bold;
             text-decoration: none;
+            margin: 10px;
         }
     </style>
 </head>
+
 <body>
 
 <header>
-    BITWATCHTV — WATCH & EARN
+    BITWATCHTV — WATCH • EARN • ENJOY
 </header>
 
-<div class="section">
-    <h2>Welcome to the Official BitWatchTV Website</h2>
-    <p>Watch movies. Earn rewards. Powered by community.</p>
-    <a class="button" href="#">Download App Soon</a>
-</div>
+<section>
+    <h2>🎬 BitWatchTV</h2>
+    <p>The first Filipino digital entertainment platform with real earning rewards — no pairing, no matching, unlimited earning while watching.</p>
 
-<div class="section">
-    <h3>BTW Token Coming Soon</h3>
-    <p>Utility • Rewards • Movie Access</p>
-</div>
+    <p>📱 ₱100/month subscription<br>
+       🎞 Unlimited Movies & Series<br>
+       💸 Earn Infinity Rewards<br>
+       🪙 BTW Token Coming Soon</p>
+
+    <a class="button" href="#">Start Watching</a>
+    <a class="button" href="#">Join Community</a>
+</section>
+
+<section>
+    <h2>What is BitWatchTV?</h2>
+    <p>
+        BitWatchTV is a digital entertainment + rewards platform where you can watch movies while earning.
+        Simple:
+        <br>✔ Watch
+        <br>✔ Share
+        <br>✔ Earn — no limits!
+    </p>
+</section>
+
+<section>
+    <h2>Why BitWatchTV?</h2>
+
+    <p>📌 <b>1. Watch & Earn (Infinity Program)</b><br>
+       Earn even with only a strong leg — no matching required.</p>
+
+    <p>📌 <b>2. Unlimited Movies for Only ₱100</b></p>
+
+    <p>📌 <b>3. Community-Based Rewards</b></p>
+
+    <p>📌 <b>4. BTW Token (Utility Token)</b><br>
+       Movie access • Rewards • Purchases • Marketplace (soon)</p>
+</section>
+
+<section>
+    <h2>Ways to Earn</h2>
+
+    <p>🔥 <b>Unilevel Infinity Income</b><br>
+       Level 1 – ₱100<br>
+       Level 2 – ₱20<br>
+       Level 3–10 – ₱10</p>
+
+    <p>🔥 <b>Starter Miner — ₱1,000</b><br>
+       • 25 codes<br>
+       • Potential Earnings = ₱2,500
+    </p>
+
+    <p>🔥 <b>Chain Builder Bonus</b> — passive rewards</p>
+
+    <p>🔥 <b>Daily Watch Rewards (Soon)</b></p>
+</section>
+
+<section>
+    <h2>BTW Token</h2>
+    <p>
+        A utility token with real purpose — not hype.<br>
+        Used for movie credits, rewards, subscription payments, and more.
+    </p>
+</section>
+
+<section>
+    <h2>Subscribe Now — ₱100/month</h2>
+    <p>
+        ✔ Unlimited Streaming<br>
+        ✔ Exclusive Movies<br>
+        ✔ Reward-Eligible Account<br>
+        ✔ Early Access to Events
+    </p>
+
+    <a class="button" href="#">Subscribe Now</a>
+    <a class="button" href="#">Download App Soon</a>
+</section>
+
+<section>
+    <h2>Join the Community</h2>
+    <p>
+        Updates • Airdrops • BTW Token Launch • New Movies • Events
+    </p>
+
+    <a class="button" href="#">Join Community</a>
+</section>
+
+<section>
+    <h2>Mission & Vision</h2>
+
+    <p><b>Mission:</b><br>
+    “To provide affordable entertainment and transparent earning opportunities through innovative, community-driven digital content.”</p>
+
+    <p><b>Vision:</b><br>
+    “To become the leading Filipino entertainment + rewards platform powered by real utility, real value, and accessible technology.”</p>
+</section>
 
 </body>
 </html>
